--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
       </div>
     </div>
     <div class="row text-center text-white">
+      <div class="col-sm-12 col-lg-12 pt-5 pl-5 pr-5">
+        <img src="assets/image/iconBootstrap.svg" alt="logo bootstrap" style="width: 150px;height: 100px;">
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"><strong>Bootstrap: 50%</strong></div>
+        </div>
+      </div>
+    </div>
+    <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-5 pl-5">
         <img src="assets/image/iconAdobe.svg" alt="logo Adobe XD" style="width: 150px;height: 100px;">
         <div class="progress">
@@ -192,28 +200,28 @@
     <!-- Le footer qui contient mes contacts -->
     <footer class="row text-center border text-white">
       <div class="col-sm-2 col-lg-2 pt-5 pl-5">
-        <h2 id="contact"><strong>.Contact :</strong></h2>
+        <h2 id="contact"><strong>.Contact:</strong></h2>
       </div>
       <div class="col-sm-2 col-lg-2 pt-5 pl-5 ">
         <img src="assets/image/iconFacebook.svg" alt="logo représentant Facebook" style="width: 50px; height: 50px;">
-        <p>Pseudo: @Remy Degrave</p>
+        <p>@Remy Degrave</p>
       </div>
       <div class="col-sm-2 col-lg-2 pt-5 pl-5">
         <img src="assets/image/iconInstagram.svg" alt="logo représentant Instagram" style="width: 50px; height: 50px;">
-        <p>Pseudo: @remy.design18</p>
+        <p>@remy.design18</p>
       </div>
       <div class="col-sm-2 col-lg-2 pt-5 pl-5">
         <img src="assets/image/iconMaison.svg" alt="logo représentant une maison" style="width: 50px; height: 50px;">
-        <p>Adresse: 4 rue de l'église 80360 Longueval</p>
+        <p>4 rue de l'église 80360 Longueval</p>
       </div>
       <div class="col-sm-2 col-lg-2 pt-5 pl-5">
         <img src="assets/image/iconGmail.svg" alt="logo représentant le gmail" style="width: 50px; 50px;">
-        <p>E-mail: bolieve.fr@gmail.com</p>
+        <p>bolieve.fr@gmail.com</p>
       </div>
       <div class="col-sm-2 col-lg-2 pt-5 pl-5">
         <img src="assets/image/iconTéléphone.svg" alt="logo représentant un téléphone"
           style="width: 50px; height: 50px;">
-        <p>Tél: 06.72.60.69.42 Fixe: 03.22.86.59.77</p>
+        <p>06.72.60.69.42 03.22.86.59.77</p>
       </div>
     </footer>
   </div>
