--- a/index.html
+++ b/index.html
@@ -16,18 +16,24 @@
     <!-- Le header sur une ligne -->
     <header class="row">
       <div class="col-sm-3 col-lg-3">
+        <!-- Photo du CV -->
         <img src="assets/image/imageCV.jpg" alt="photo de profil" style="width: 300px; height: 400px;">
       </div>
       <div class="col-sm-9 col-lg-9 text-center text-white pt-5">
+        <!-- Texte de bienvenue -->
         <p>Bienvenue sur mon <strong>CV Numérique.</strong></p>
+        <!-- Mon Nom et Prénom en titre de premier niveau -->
         <h1>Degrave Rémy</h1>
+        <!-- Titre de second niveau, pour montrer dans quel domaine je suis -->
         <h2>Web Designer</h2>
       </div>
 
     </header>
     <!-- Barre de navigation -->
     <nav class="navbar navbar-expand-lg navbar-white border">
+      <!-- Accueil -->
       <a class="navbar-brand text-white" href="#">Accueil</a>
+      <!-- Bouton Burger -->
       <button class="navbar-toggler colorbg" type="button" data-toggle="collapse" data-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -35,18 +41,23 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
+            <!-- Formation -->
             <a class="nav-link text-white" href="#formation">Formation<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
+            <!-- Compétences -->
             <a class="nav-link text-white" href="#competences">Compétences</a>
           </li>
           <li class="nav-item">
+            <!-- Loisirs -->
             <a class="nav-link text-white" href="#loisirs">Loisirs</a>
           </li>
           <li class="nav-item">
+            <!-- Portfolio -->
             <a class="nav-link text-white" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
+            <!-- Contact -->
             <a class="nav-link text-white" href="#contact">Contact</a>
           </li>
         </ul>
@@ -54,54 +65,61 @@
     </nav>
     <!-- Formation et les éléments à l'intérieur -->
     <div class="row text-center border text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconFormation.svg" alt="iconFormation.svg" style="width: 150px; height: 100px;">
         <h2 id="formation"><strong>.Formation (études, stages..) :</strong></h2>
       </div>
     </div>
+    <!-- La Manu -->
     <div class="row text-center">
-      <div class=" col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class=" col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;">
         <p class="text-white pt-2">-La Manu à Amiens (Octobre 2020 - Mars 2021) <strong>Titre professionnel Web
             Designer</strong>.</p>
       </div>
     </div>
+    <!-- Lycée Lamarck -->
     <div class="row text-center">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;">
         <p class="text-white pt-2">-Lycée Lamarck à Albert (2018-2019) <strong>Bac professionnel Technicien
             d'usinage.</strong></p>
       </div>
     </div>
+    <!-- Lycée Pierre Mendes France -->
     <div class="row text-center">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;">
         <p class="text-white pt-2">-Lycée Pierre Mendes France à Péronne (2016-2018) <strong>CAP Vendeur Magasinier en
             pièces automobiles.</strong></p>
       </div>
     </div>
+    <!-- Collège Béranger -->
     <div class="row text-center">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;">
         <p class="text-white pt-2"><strong>-Collège Béranger à Péronne</strong> (2012-2016).</p>
       </div>
     </div>
+    <!-- Stage Norauto -->
     <div class="row text-center">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;">
         <p class="text-white pt-2">-Stage : <strong>Norauto à Péronne</strong> (Novembre-Décembre 2017)
           (Mars-Avril
           2018).</p>
       </div>
     </div>
+    <!-- Stage Intermarché -->
     <div class="row text-center">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;">
         <p class="text-white pt-2">-Stage : <strong>Intermarché à Péronne</strong> -(Novembre-Décembre 2016).</p>
       </div>
     </div>
+    <!-- Stage Charcutier-Traiteur -->
     <div class="row text-center">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;">
         <p class="text-white pt-2">-Stage de découverte :<strong> Charcutier-traiteur à Combles</strong>
           -(Novembre-Décembre 2015).</p>
@@ -109,81 +127,101 @@
     </div>
     <!-- Les compétences -->
     <div class="row text-center text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5 border">
+      <div class="col-sm-12 col-lg-12 pt-3 border">
         <img src="assets/image/iconCompetences.svg" alt="logo compétences" style="width:150px; height: 100px;">
         <h2 id="competences"><strong>.Compétences :</strong></h2>
       </div>
     </div>
+    <!-- Logo/Barre de progression HTML -->
     <div class="row text-center">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconHtml.svg" alt="logo html 5" style="width: 150px; height: 100px;">
         <div class="progress">
-          <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">HTML 5: 40%</div>
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
+            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">HTML 5: 40%</div>
         </div>
       </div>
     </div>
+    <!-- Logo/Barre de progression CSS -->
     <div class="row text-center text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconCss.svg" alt="logo css 3" style="width: 150px;height: 100px;">
         <div class="progress">
-          <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"><strong>CSS 3: 20%</strong></div>
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
+            aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"><strong>CSS 3: 20%</strong>
+          </div>
         </div>
       </div>
     </div>
+    <!-- Logo/Barre de progression Bootstrap -->
     <div class="row text-center text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5 pr-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconBootstrap.svg" alt="logo bootstrap" style="width: 150px;height: 100px;">
         <div class="progress">
-          <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"><strong>Bootstrap: 50%</strong></div>
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
+            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"><strong>Bootstrap: 50%</strong>
+          </div>
         </div>
       </div>
     </div>
+    <!-- Logo/Barre de progression Adobe XD -->
     <div class="row text-center text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconAdobe.svg" alt="logo Adobe XD" style="width: 150px;height: 100px;">
         <div class="progress">
-          <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><strong>Adobe XD: 80%</strong></div>
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
+            aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><strong>Adobe XD: 80%</strong>
+          </div>
         </div>
       </div>
     </div>
+    <!-- Logo/Barre de progression Java Script -->
     <div class="row text-center text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconJs.svg" alt="logo Java Script" style="width: 150px; height: 100px;">
         <div class="progress">
-          <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%"><strong>Java Script: 10%</strong></div>
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
+            aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%"><strong>Java Script:
+              10%</strong></div>
         </div>
       </div>
     </div>
+    <!-- Logo/Barre de progression Analyse -->
     <div class="row text-center text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconAnalyse.svg" alt="logo analyse" style="width: 150px; height: 100px;">
-          <div class="progress">
-            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"><strong>Analyser les besoins et demandent des clients: 50%</strong></div>
-          </div>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"><strong>Analyser les besoins et
+              demandent des clients: 50%</strong></div>
+        </div>
       </div>
     </div>
     <!-- Mes loisirs -->
     <div class="row text-center text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5 border">
+      <div class="col-sm-12 col-lg-12 pt-3 border">
         <img src="assets/image/iconLoisirs.svg" alt="logo pour définir le loisirs" style="width: 150px; height: 100px;">
         <h2 id="loisirs"><strong>.Loisirs :</strong></h2>
       </div>
     </div>
+    <!-- Icon Catch -->
     <div class="row text-center text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconCatch.svg" alt="logo représentant des catcheurs"
           style="width: 150px; height: 100px;">
         <p class="text-white pt-2"><strong>-Le Catch</strong> (WWE,AEW etc..)</p>
       </div>
     </div>
+    <!-- Icon Dessin -->
     <div class="row text-center text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconDessin.svg" alt="logo représentant un dessin" style="width: 150px; height: 100px;">
         <p class="text-white pt-2">-Le dessin (certains de mes travaux seront dans mon portfolio).</p>
       </div>
     </div>
+    <!-- Icon Sport -->
     <div class="row text-center text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5">
+      <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconMusculation.svg" alt="logo représentant un sportif"
           style="width: 150px; height: 100px;">
         <p class="text-white pt-2"><strong>-Le sport</strong> (Musculation,Course à pied,etc..)</p>
@@ -191,34 +229,74 @@
     </div>
     <!-- Mon portfolio -->
     <div class="row text-center text-white">
-      <div class="col-sm-12 col-lg-12 pt-5 pl-5 border text-white">
+      <div class="col-sm-12 col-lg-12 pt-3 border text-white">
+        <!-- Icon Portfolio -->
         <img src="assets/image/iconPortfolio.svg" alt="logo représentant un portfolio"
           style="width: 150px; height: 100px;">
         <h2 id="portfolio"><strong>.Portfolio :</strong></h2>
       </div>
     </div>
+    <!-- Premier dessin -->
+    <div class="row text-center text-white">
+      <div class="col-sm-2 col-lg-2 pt-3">
+        <img src="assets/image/dessinSethRollins.jpg" alt="dessin de Seth Rollins" style="width: 200px; height: 300px;">
+        <p>.Seth Rollins</p>
+      </div>
+      <!-- Deuxième dessin -->
+      <div class="col-sm-2 col-lg-2 pt-3">
+        <img src="assets/image/dessinDrew.jpg" alt="dessin de Drew McIntyre" style="width: 200px; height: 300px;">
+        <p>.Drew McIntyre</p>
+      </div>
+      <!-- Troisième dessin -->
+      <div class="col-sm-2 col-lg-2 pt-3">
+        <img src="assets/image/dessinSheamus.jpg" alt="dessin de Sheamus" style="width: 200px; height: 300px;">
+        <p>.Sheamus</p>
+      </div>
+      <!-- Quatrième dessin -->
+      <div class="col-sm-2 col-lg-2 pt-3">
+        <img src="assets/image/dessinER2020.jpg" alt="dessin de Extreme Rules 2020"
+          style="width: 200px; height: 300px;">
+        <p>.Extreme Rules 2020</p>
+      </div>
+      <!-- Cinquième dessin -->
+      <div class="col-sm-2 col-lg-2 pt-3">
+        <img src="assets/image/dessinBartSimpson.jpg" alt="dessin de Bart Simpson" style="width: 200px; height: 300px;">
+        <p>.Bart Simpson</p>
+      </div>
+      <!-- Sixième dessin -->
+      <div class="col-sm-2 col-lg-2 pt-3">
+        <img src="assets/image/dessin1418.jpg" alt="dessin de la 1er guerre mondial"
+          style="width: 200px; height: 300px;">
+        <p>.1st World War 1914-1918</p>
+      </div>
+    </div>
     <!-- Le footer qui contient mes contacts -->
     <footer class="row text-center border text-white">
-      <div class="col-sm-2 col-lg-2 pt-5 pl-5">
+      <div class="col-sm-2 col-lg-2 pt-3">
         <h2 id="contact"><strong>.Contact:</strong></h2>
       </div>
-      <div class="col-sm-2 col-lg-2 pt-5 pl-5 ">
+      <!-- Coordonnées Facebook -->
+      <div class="col-sm-2 col-lg-2 pt-3 ">
         <img src="assets/image/iconFacebook.svg" alt="logo représentant Facebook" style="width: 50px; height: 50px;">
         <p>@Remy Degrave</p>
       </div>
-      <div class="col-sm-2 col-lg-2 pt-5 pl-5">
+      <!-- Coordonnées Instagram -->
+      <div class="col-sm-2 col-lg-2 pt-3">
         <img src="assets/image/iconInstagram.svg" alt="logo représentant Instagram" style="width: 50px; height: 50px;">
         <p>@remy.design18</p>
       </div>
-      <div class="col-sm-2 col-lg-2 pt-5 pl-5">
+      <!-- Coordonnées Adresse -->
+      <div class="col-sm-2 col-lg-2 pt-3">
         <img src="assets/image/iconMaison.svg" alt="logo représentant une maison" style="width: 50px; height: 50px;">
         <p>4 rue de l'église 80360 Longueval</p>
       </div>
-      <div class="col-sm-2 col-lg-2 pt-5 pl-5">
-        <img src="assets/image/iconGmail.svg" alt="logo représentant le gmail" style="width: 50px; 50px;">
+      <!-- Coordonnées E-mail -->
+      <div class="col-sm-2 col-lg-2 pt-3">
+        <img src="assets/image/iconGmail.svg" alt="logo représentant le gmail" style="width: 50px; height: 50px;">
         <p>bolieve.fr@gmail.com</p>
       </div>
-      <div class="col-sm-2 col-lg-2 pt-5 pl-5">
+      <!-- Coordonnées de téléphone -->
+      <div class="col-sm-2 col-lg-2 pt-3">
         <img src="assets/image/iconTéléphone.svg" alt="logo représentant un téléphone"
           style="width: 50px; height: 50px;">
         <p>06.72.60.69.42 03.22.86.59.77</p>
