--- a/index.html
+++ b/index.html
@@ -277,12 +277,14 @@
       </div>
       <!-- Coordonnées Facebook -->
       <div class="col-sm-2 col-lg-2 pt-3 ">
-        <img src="assets/image/iconFacebook.svg" alt="logo représentant Facebook" style="width: 50px; height: 50px;">
+        <a href="https://fr-fr.facebook.com/">
+        <img src="assets/image/iconFacebook.svg" alt="logo représentant Facebook" style="width: 50px; height: 50px;"></a>
         <p>@Remy Degrave</p>
       </div>
       <!-- Coordonnées Instagram -->
       <div class="col-sm-2 col-lg-2 pt-3">
-        <img src="assets/image/iconInstagram.svg" alt="logo représentant Instagram" style="width: 50px; height: 50px;">
+        <a href="https://www.instagram.com/remy.design18/">
+        <img src="assets/image/iconInstagram.svg" alt="logo représentant Instagram" style="width: 50px; height: 50px;"></a>
         <p>@remy.design18</p>
       </div>
       <!-- Coordonnées Adresse -->
