--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
     <!-- La Manu -->
     <div class="row text-center">
       <div class=" col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;">
+        <a href="https://lamanu.fr/campus/amiens-formation-numerique/">
+        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-La Manu à Amiens (Octobre 2020 - Mars 2021) <strong>Titre professionnel Web
             Designer</strong>.</p>
       </div>
@@ -81,7 +82,8 @@
     <!-- Lycée Lamarck -->
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;">
+        <a href="https://lamarck.lyc.ac-amiens.fr/">
+        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-Lycée Lamarck à Albert (2018-2019) <strong>Bac professionnel Technicien
             d'usinage.</strong></p>
       </div>
@@ -89,7 +91,8 @@
     <!-- Lycée Pierre Mendes France -->
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;">
+        <a href="https://www.letudiant.fr/etudes/annuaire-des-lycees/lycee-general-et-technologique-lycee-des-metiers-pierre-mendes-france-9643.html">
+        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-Lycée Pierre Mendes France à Péronne (2016-2018) <strong>CAP Vendeur Magasinier en
             pièces automobiles.</strong></p>
       </div>
@@ -97,14 +100,16 @@
     <!-- Collège Béranger -->
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;">
+        <a href="http://beranger.clg.ac-amiens.fr/spip.php?rubrique2">
+        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2"><strong>-Collège Béranger à Péronne</strong> (2012-2016).</p>
       </div>
     </div>
     <!-- Stage Norauto -->
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;">
+        <a href="https://centres.norauto.fr/somme/peronne/4-rue-de-rome-bp-90219">
+        <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-Stage : <strong>Norauto à Péronne</strong> (Novembre-Décembre 2017)
           (Mars-Avril
           2018).</p>
@@ -113,14 +118,16 @@
     <!-- Stage Intermarché -->
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;">
+        <a href="https://www.intermarche.com/magasins/01310/peronne-80200/infos-pratiques">
+        <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-Stage : <strong>Intermarché à Péronne</strong> -(Novembre-Décembre 2016).</p>
       </div>
     </div>
     <!-- Stage Charcutier-Traiteur -->
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;">
+        <a href="https://www.charcuterie-choquier.fr/">
+        <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-Stage de découverte :<strong> Charcutier-traiteur à Combles</strong>
           -(Novembre-Décembre 2015).</p>
       </div>
@@ -135,7 +142,8 @@
     <!-- Logo/Barre de progression HTML -->
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconHtml.svg" alt="logo html 5" style="width: 150px; height: 100px;">
+        <a href="https://developer.mozilla.org/fr/docs/Web/HTML">
+        <img src="assets/image/iconHtml.svg" alt="logo html 5" style="width: 150px; height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
             aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">HTML 5: 40%</div>
@@ -145,7 +153,8 @@
     <!-- Logo/Barre de progression CSS -->
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconCss.svg" alt="logo css 3" style="width: 150px;height: 100px;">
+        <a href="https://developer.mozilla.org/fr/docs/Web/CSS">
+        <img src="assets/image/iconCss.svg" alt="logo css 3" style="width: 150px;height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
             aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"><strong>CSS 3: 20%</strong>
@@ -156,7 +165,8 @@
     <!-- Logo/Barre de progression Bootstrap -->
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconBootstrap.svg" alt="logo bootstrap" style="width: 150px;height: 100px;">
+        <a href="https://getbootstrap.com/">
+        <img src="assets/image/iconBootstrap.svg" alt="logo bootstrap" style="width: 150px;height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
             aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"><strong>Bootstrap: 50%</strong>
@@ -167,7 +177,8 @@
     <!-- Logo/Barre de progression Adobe XD -->
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconAdobe.svg" alt="logo Adobe XD" style="width: 150px;height: 100px;">
+        <a href="https://www.adobe.com/fr/products/xd.html">
+        <img src="assets/image/iconAdobe.svg" alt="logo Adobe XD" style="width: 150px;height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
             aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><strong>Adobe XD: 80%</strong>
@@ -178,7 +189,8 @@
     <!-- Logo/Barre de progression Java Script -->
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <img src="assets/image/iconJs.svg" alt="logo Java Script" style="width: 150px; height: 100px;">
+        <a href="https://developer.mozilla.org/fr/docs/Web/JavaScript">
+        <img src="assets/image/iconJs.svg" alt="logo Java Script" style="width: 150px; height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
             aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%"><strong>Java Script:
@@ -207,8 +219,9 @@
     <!-- Icon Catch -->
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
+        <a href="https://www.wwe.com/">
         <img src="assets/image/iconCatch.svg" alt="logo représentant des catcheurs"
-          style="width: 150px; height: 100px;">
+          style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2"><strong>-Le Catch</strong> (WWE,AEW etc..)</p>
       </div>
     </div>
@@ -273,11 +286,11 @@
     <!-- Le footer qui contient mes contacts -->
     <footer class="row text-center border text-white">
       <div class="col-sm-2 col-lg-2 pt-3">
-        <h2 id="contact"><strong>.Contact:</strong></h2>
+        <h2 id="contact"><strong>.Contact :</strong></h2>
       </div>
       <!-- Coordonnées Facebook -->
       <div class="col-sm-2 col-lg-2 pt-3 ">
-        <a href="https://fr-fr.facebook.com/">
+        <a href="https://www.facebook.com/remy.degrave.7">
         <img src="assets/image/iconFacebook.svg" alt="logo représentant Facebook" style="width: 50px; height: 50px;"></a>
         <p>@Remy Degrave</p>
       </div>
@@ -289,7 +302,8 @@
       </div>
       <!-- Coordonnées Adresse -->
       <div class="col-sm-2 col-lg-2 pt-3">
-        <img src="assets/image/iconMaison.svg" alt="logo représentant une maison" style="width: 50px; height: 50px;">
+        <a href="https://www.google.com/maps/dir//4+Rue+de+l'%C3%89glise,+Longueval/@50.0262696,2.7358956,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x47dd56f8785f9da9:0x1f425aef917bd995!2m2!1d2.8059357!2d50.0261804?hl=fr-FR">
+        <img src="assets/image/iconMaison.svg" alt="logo représentant une maison" style="width: 50px; height: 50px;"></a>
         <p>4 rue de l'église 80360 Longueval</p>
       </div>
       <!-- Coordonnées E-mail -->
