--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <!-- La Manu -->
     <div class="row text-center">
       <div class=" col-sm-12 col-lg-12 pt-3">
+        <!-- Lien vers la page La Manu -->
         <a href="https://lamanu.fr/campus/amiens-formation-numerique/">
         <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-La Manu à Amiens (Octobre 2020 - Mars 2021) <strong>Titre professionnel Web
