--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <img src="assets/image/iconHtml.svg" alt="logo html 5" style="width: 150px; height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
-            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">HTML 5: 40%</div>
+            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">HTML 5: 60%</div>
         </div>
       </div>
     </div>
@@ -158,7 +158,7 @@
         <img src="assets/image/iconCss.svg" alt="logo css 3" style="width: 150px;height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
-            aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"><strong>CSS 3: 20%</strong>
+            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"><strong>CSS 3: 40%</strong>
           </div>
         </div>
       </div>
@@ -194,19 +194,31 @@
         <img src="assets/image/iconJs.svg" alt="logo Java Script" style="width: 150px; height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
-            aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%"><strong>Java Script:
-              10%</strong></div>
+            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"><strong>Java Script:
+              40%</strong></div>
         </div>
       </div>
     </div>
+        <!-- Logo/Barre de progression Jquery -->
+        <div class="row text-center text-white">
+          <div class="col-sm-12 col-lg-12 pt-3">
+            <a href="https://jquery.com/">
+            <img src="assets/image/iconJquery.svg" alt="logo Jquery" style="width: 150px; height: 100px;"></a>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
+                aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"><strong>Jquery:
+                  40%</strong></div>
+            </div>
+          </div>
+        </div>
     <!-- Logo/Barre de progression Analyse -->
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
         <img src="assets/image/iconAnalyse.svg" alt="logo analyse" style="width: 150px; height: 100px;">
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
-            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"><strong>Analyser les besoins et
-              demandent des clients: 50%</strong></div>
+            aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><strong>Analyser les besoins et
+              demandent des clients: 80%</strong></div>
         </div>
       </div>
     </div>
@@ -297,9 +309,9 @@
       </div>
       <!-- Coordonnées Instagram -->
       <div class="col-sm-2 col-lg-2 pt-3">
-        <a href="https://www.instagram.com/remy.design18/">
+        <a href="https://www.instagram.com/remy.dgr/">
         <img src="assets/image/iconInstagram.svg" alt="logo représentant Instagram" style="width: 50px; height: 50px;"></a>
-        <p>@remy.design18</p>
+        <p>@remy.dgr</p>
       </div>
       <!-- Coordonnées Adresse -->
       <div class="col-sm-2 col-lg-2 pt-3">
