--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <p>Bienvenue sur mon <strong>CV Numérique.</strong></p>
         <!-- Mon Nom et Prénom en titre de premier niveau -->
         <h1>Degrave Rémy</h1>
+        <!-- Date de naissance et titulaire du permis -->
+        <p>19 Mai 2001, Permis B</p>
         <!-- Titre de second niveau, pour montrer dans quel domaine je suis -->
         <h2>Web Designer</h2>
       </div>
@@ -75,7 +77,7 @@
       <div class=" col-sm-12 col-lg-12 pt-3">
         <!-- Lien vers la page La Manu -->
         <a href="https://lamanu.fr/campus/amiens-formation-numerique/">
-        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
+          <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-La Manu à Amiens (Octobre 2020 - Mars 2021) <strong>Titre professionnel Web
             Designer</strong>.</p>
       </div>
@@ -84,7 +86,7 @@
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
         <a href="https://lamarck.lyc.ac-amiens.fr/">
-        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
+          <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-Lycée Lamarck à Albert (2018-2019) <strong>Bac professionnel Technicien
             d'usinage.</strong></p>
       </div>
@@ -92,8 +94,9 @@
     <!-- Lycée Pierre Mendes France -->
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
-        <a href="https://www.letudiant.fr/etudes/annuaire-des-lycees/lycee-general-et-technologique-lycee-des-metiers-pierre-mendes-france-9643.html">
-        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
+        <a
+          href="https://www.letudiant.fr/etudes/annuaire-des-lycees/lycee-general-et-technologique-lycee-des-metiers-pierre-mendes-france-9643.html">
+          <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-Lycée Pierre Mendes France à Péronne (2016-2018) <strong>CAP Vendeur Magasinier en
             pièces automobiles.</strong></p>
       </div>
@@ -102,7 +105,7 @@
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
         <a href="http://beranger.clg.ac-amiens.fr/spip.php?rubrique2">
-        <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
+          <img src="assets/image/iconSchool3.svg" alt="iconSchool.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2"><strong>-Collège Béranger à Péronne</strong> (2012-2016).</p>
       </div>
     </div>
@@ -110,7 +113,7 @@
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
         <a href="https://centres.norauto.fr/somme/peronne/4-rue-de-rome-bp-90219">
-        <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;"></a>
+          <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-Stage : <strong>Norauto à Péronne</strong> (Novembre-Décembre 2017)
           (Mars-Avril
           2018).</p>
@@ -120,7 +123,7 @@
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
         <a href="https://www.intermarche.com/magasins/01310/peronne-80200/infos-pratiques">
-        <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;"></a>
+          <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-Stage : <strong>Intermarché à Péronne</strong> -(Novembre-Décembre 2016).</p>
       </div>
     </div>
@@ -128,7 +131,7 @@
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
         <a href="https://www.charcuterie-choquier.fr/">
-        <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;"></a>
+          <img src="assets/image/iconStage.svg" alt="iconStage.svg" style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2">-Stage de découverte :<strong> Charcutier-traiteur à Combles</strong>
           -(Novembre-Décembre 2015).</p>
       </div>
@@ -144,7 +147,7 @@
     <div class="row text-center">
       <div class="col-sm-12 col-lg-12 pt-3">
         <a href="https://developer.mozilla.org/fr/docs/Web/HTML">
-        <img src="assets/image/iconHtml.svg" alt="logo html 5" style="width: 150px; height: 100px;"></a>
+          <img src="assets/image/iconHtml.svg" alt="logo html 5" style="width: 150px; height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
             aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">HTML 5: 60%</div>
@@ -155,7 +158,7 @@
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
         <a href="https://developer.mozilla.org/fr/docs/Web/CSS">
-        <img src="assets/image/iconCss.svg" alt="logo css 3" style="width: 150px;height: 100px;"></a>
+          <img src="assets/image/iconCss.svg" alt="logo css 3" style="width: 150px;height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
             aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"><strong>CSS 3: 40%</strong>
@@ -167,7 +170,7 @@
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
         <a href="https://getbootstrap.com/">
-        <img src="assets/image/iconBootstrap.svg" alt="logo bootstrap" style="width: 150px;height: 100px;"></a>
+          <img src="assets/image/iconBootstrap.svg" alt="logo bootstrap" style="width: 150px;height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
             aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"><strong>Bootstrap: 50%</strong>
@@ -179,7 +182,7 @@
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
         <a href="https://www.adobe.com/fr/products/xd.html">
-        <img src="assets/image/iconAdobe.svg" alt="logo Adobe XD" style="width: 150px;height: 100px;"></a>
+          <img src="assets/image/iconAdobe.svg" alt="logo Adobe XD" style="width: 150px;height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
             aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><strong>Adobe XD: 80%</strong>
@@ -191,7 +194,7 @@
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
         <a href="https://developer.mozilla.org/fr/docs/Web/JavaScript">
-        <img src="assets/image/iconJs.svg" alt="logo Java Script" style="width: 150px; height: 100px;"></a>
+          <img src="assets/image/iconJs.svg" alt="logo Java Script" style="width: 150px; height: 100px;"></a>
         <div class="progress">
           <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar"
             aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"><strong>Java Script:
@@ -199,18 +202,30 @@
         </div>
       </div>
     </div>
-        <!-- Logo/Barre de progression Jquery -->
-        <div class="row text-center text-white">
-          <div class="col-sm-12 col-lg-12 pt-3">
-            <a href="https://jquery.com/">
-            <img src="assets/image/iconJquery.svg" alt="logo Jquery" style="width: 150px; height: 100px;"></a>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
-                aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"><strong>Jquery:
-                  40%</strong></div>
-            </div>
-          </div>
+    <!-- Logo/Barre de progression Jquery -->
+    <div class="row text-center text-white">
+      <div class="col-sm-12 col-lg-12 pt-3">
+        <a href="https://jquery.com/">
+          <img src="assets/image/iconJquery.svg" alt="logo Jquery" style="width: 150px; height: 100px;"></a>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
+            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"><strong>Jquery:
+              40%</strong></div>
         </div>
+      </div>
+    </div>
+    <!-- Logo/Barre de progression WordPress -->
+    <div class="row text-center text-white">
+      <div class="col-sm-12 col-lg-12 pt-3">
+        <a href="https://fr.wordpress.com/">
+          <img src="assets/image/iconWordpress.svg" alt="logo Wordpress" style="width: 150px; height: 100px;"></a>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
+            aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%"><strong>Wordpress:
+              10%</strong></div>
+        </div>
+      </div>
+    </div>
     <!-- Logo/Barre de progression Analyse -->
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
@@ -233,8 +248,8 @@
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
         <a href="https://www.wwe.com/">
-        <img src="assets/image/iconCatch.svg" alt="logo représentant des catcheurs"
-          style="width: 150px; height: 100px;"></a>
+          <img src="assets/image/iconCatch.svg" alt="logo représentant des catcheurs"
+            style="width: 150px; height: 100px;"></a>
         <p class="text-white pt-2"><strong>-Le Catch</strong> (WWE,AEW etc..)</p>
       </div>
     </div>
@@ -302,30 +317,34 @@
         <h2 id="contact"><strong>.Contact :</strong></h2>
       </div>
       <!-- Coordonnées Facebook -->
-      <div class="col-sm-2 col-lg-2 pt-3 ">
+      <div class="col-sm-4 col-lg-2 pt-3 ">
         <a href="https://www.facebook.com/remy.degrave.7">
-        <img src="assets/image/iconFacebook.svg" alt="logo représentant Facebook" style="width: 50px; height: 50px;"></a>
+          <img src="assets/image/iconFacebook.svg" alt="logo représentant Facebook"
+            style="width: 50px; height: 50px;"></a>
         <p>@Remy Degrave</p>
       </div>
       <!-- Coordonnées Instagram -->
-      <div class="col-sm-2 col-lg-2 pt-3">
+      <div class="col-sm-6 col-lg-2 pt-3">
         <a href="https://www.instagram.com/remy.dgr/">
-        <img src="assets/image/iconInstagram.svg" alt="logo représentant Instagram" style="width: 50px; height: 50px;"></a>
+          <img src="assets/image/iconInstagram.svg" alt="logo représentant Instagram"
+            style="width: 50px; height: 50px;"></a>
         <p>@remy.dgr</p>
       </div>
       <!-- Coordonnées Adresse -->
-      <div class="col-sm-2 col-lg-2 pt-3">
-        <a href="https://www.google.com/maps/dir//4+Rue+de+l'%C3%89glise,+Longueval/@50.0262696,2.7358956,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x47dd56f8785f9da9:0x1f425aef917bd995!2m2!1d2.8059357!2d50.0261804?hl=fr-FR">
-        <img src="assets/image/iconMaison.svg" alt="logo représentant une maison" style="width: 50px; height: 50px;"></a>
+      <div class="col-sm-8 col-lg-2 pt-3">
+        <a
+          href="https://www.google.com/maps/dir//4+Rue+de+l'%C3%89glise,+Longueval/@50.0262696,2.7358956,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x47dd56f8785f9da9:0x1f425aef917bd995!2m2!1d2.8059357!2d50.0261804?hl=fr-FR">
+          <img src="assets/image/iconMaison.svg" alt="logo représentant une maison"
+            style="width: 50px; height: 50px;"></a>
         <p>4 rue de l'église 80360 Longueval</p>
       </div>
       <!-- Coordonnées E-mail -->
-      <div class="col-sm-2 col-lg-2 pt-3">
+      <div class="col-sm-10 col-lg-2 pt-3">
         <img src="assets/image/iconGmail.svg" alt="logo représentant le gmail" style="width: 50px; height: 50px;">
         <p>bolieve.fr@gmail.com</p>
       </div>
       <!-- Coordonnées de téléphone -->
-      <div class="col-sm-2 col-lg-2 pt-3">
+      <div class="col-sm-12 col-lg-2 pt-3">
         <img src="assets/image/iconTéléphone.svg" alt="logo représentant un téléphone"
           style="width: 50px; height: 50px;">
         <p>06.72.60.69.42 03.22.86.59.77</p>
