--- a/index.html
+++ b/index.html
@@ -214,6 +214,18 @@
         </div>
       </div>
     </div>
+    <!-- Logo/Barre de progression Php -->
+    <div class="row text-center text-white">
+      <div class="col-sm-12 col-lg-12 pt-3">
+        <a href="https://jquery.com/">
+          <img src="assets/image/iconPhp.svg" alt="logo Php" style="width: 150px; height: 100px;"></a>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar"
+            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"><strong>Php:
+              40%</strong></div>
+        </div>
+      </div>
+    </div>
     <!-- Logo/Barre de progression WordPress -->
     <div class="row text-center text-white">
       <div class="col-sm-12 col-lg-12 pt-3">
@@ -313,53 +325,49 @@
     </div>
     <!-- Le footer qui contient mes contacts -->
     <footer class="row text-center border text-white">
-      <div class="col-sm-2 col-lg-2 pt-3">
+      <div class="col-12 col-lg-12 pt-3">
         <h2 id="contact"><strong>.Contact :</strong></h2>
       </div>
       <!-- Coordonnées Facebook -->
-      <div class="col-sm-4 col-lg-2 pt-3 ">
+      <div class="col-6 col-lg-3 pt-3 ">
         <a href="https://www.facebook.com/remy.degrave.7">
-          <img src="assets/image/iconFacebook.svg" alt="logo représentant Facebook"
-            style="width: 50px; height: 50px;"></a>
+          <img class="icon" src="assets/image/iconFacebook.svg" alt="logo représentant Facebook"></a>
         <p>@Remy Degrave</p>
       </div>
       <!-- Coordonnées Instagram -->
-      <div class="col-sm-6 col-lg-2 pt-3">
+      <div class="col-6 col-lg-2 pt-3">
         <a href="https://www.instagram.com/remy.dgr/">
-          <img src="assets/image/iconInstagram.svg" alt="logo représentant Instagram"
-            style="width: 50px; height: 50px;"></a>
+          <img class="icon" src="assets/image/iconInstagram.svg" alt="logo représentant Instagram"></a>
         <p>@remy.dgr</p>
       </div>
       <!-- Coordonnées Adresse -->
-      <div class="col-sm-8 col-lg-2 pt-3">
+      <div class="col-12 col-lg-2 pt-3">
         <a
           href="https://www.google.com/maps/dir//4+Rue+de+l'%C3%89glise,+Longueval/@50.0262696,2.7358956,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x47dd56f8785f9da9:0x1f425aef917bd995!2m2!1d2.8059357!2d50.0261804?hl=fr-FR">
-          <img src="assets/image/iconMaison.svg" alt="logo représentant une maison"
-            style="width: 50px; height: 50px;"></a>
+          <img class="icon" src="assets/image/iconMaison.svg" alt="logo représentant une maison"></a>
         <p>4 rue de l'église 80360 Longueval</p>
       </div>
       <!-- Coordonnées E-mail -->
-      <div class="col-sm-10 col-lg-2 pt-3">
-        <img src="assets/image/iconGmail.svg" alt="logo représentant le gmail" style="width: 50px; height: 50px;">
+      <div class="col-6 col-lg-2 pt-3">
+        <img class="icon" src="assets/image/iconGmail.svg" alt="logo représentant le gmail">
         <p>bolieve.fr@gmail.com</p>
       </div>
       <!-- Coordonnées de téléphone -->
-      <div class="col-sm-12 col-lg-2 pt-3">
-        <img src="assets/image/iconTéléphone.svg" alt="logo représentant un téléphone"
-          style="width: 50px; height: 50px;">
-        <p>06.72.60.69.42 03.22.86.59.77</p>
+      <div class="col-6 col-lg-3 pt-3">
+        <img class="icon" src="assets/image/iconTéléphone.svg" alt="logo représentant un téléphone">
+        <p>06.72.60.69.42 <br> 03.22.86.59.77</p>
       </div>
     </footer>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-    crossorigin="anonymous"></script>
+    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
