--- a/index.html
+++ b/index.html
@@ -349,6 +349,8 @@
       </div>
       <!-- Coordonnées E-mail -->
       <div class="col-6 col-lg-2 pt-3">
+        <!-- a mailto correspond pour mettre le liens du Mail -->
+        <a mailto="https://mail.google.com/mail/u/0/#inbox">
         <img class="icon" src="assets/image/iconGmail.svg" alt="logo représentant le gmail">
         <p>bolieve.fr@gmail.com</p>
       </div>
